--- a/templates/apps/xp-manager.hbs
+++ b/templates/apps/xp-manager.hbs
@@ -10,12 +10,14 @@
   </div>
   <ul class="xp-breakdown-list">
     <li><span><strong>{{localize "l5r4.character.experience.breakdown.base"}}</strong>:</span> <span>{{xp.breakdown.base}}</span></li>
-    <li><span><strong>{{localize "l5r4.character.experience.breakdown.disadvantagesGrant"}}</strong>:</span> <span>{{xp.breakdown.disadvantagesGranted}} {{localize "l5r4.character.experience.breakdown.cap10"}}</span></li>
-    <li><span><strong>{{localize "l5r4.character.experience.breakdown.manualAdjustments"}}</strong>:</span> <span>{{xp.breakdown.manual}}</span></li>
-    <li><span><strong>{{localize "l5r4.character.experience.breakdown.traits"}}</strong>:</span> <span>{{xp.breakdown.traits}}</span></li>
-    <li><span><strong>{{localize "l5r4.character.experience.breakdown.void"}}</strong>:</span> <span>{{xp.breakdown.void}}</span></li>
-    <li><span><strong>{{localize "l5r4.character.experience.breakdown.skills"}}</strong>:</span> <span>{{xp.breakdown.skills}}</span></li>
-    <li><span><strong>{{localize "l5r4.character.experience.breakdown.advantages"}}</strong>:</span> <span>{{xp.breakdown.advantages}}</span></li>
+    {{#if xp.breakdown.disadvantagesGranted}}<li><span><strong>{{localize "l5r4.character.experience.breakdown.disadvantagesGrant"}}</strong>:</span> <span>{{xp.breakdown.disadvantagesGranted}} {{localize "l5r4.character.experience.breakdown.cap10"}}</span></li>{{/if}}
+    {{#if xp.breakdown.manual}}<li><span><strong>{{localize "l5r4.character.experience.breakdown.manualAdjustments"}}</strong>:</span> <span>{{xp.breakdown.manual}}</span></li>{{/if}}
+    {{#if xp.breakdown.traits}}<li><span><strong>{{localize "l5r4.character.experience.breakdown.traits"}}</strong>:</span> <span>{{xp.breakdown.traits}}</span></li>{{/if}}
+    {{#if xp.breakdown.void}}<li><span><strong>{{localize "l5r4.character.experience.breakdown.void"}}</strong>:</span> <span>{{xp.breakdown.void}}</span></li>{{/if}}
+    {{#if xp.breakdown.skills}}<li><span><strong>{{localize "l5r4.character.experience.breakdown.skills"}}</strong>:</span> <span>{{xp.breakdown.skills}}</span></li>{{/if}}
+    {{#if xp.breakdown.advantages}}<li><span><strong>{{localize "l5r4.character.experience.breakdown.advantages"}}</strong>:</span> <span>{{xp.breakdown.advantages}}</span></li>{{/if}}
+    {{#if xp.breakdown.kata}}<li><span><strong>{{localize "l5r4.character.experience.breakdown.kata"}}</strong>:</span> <span>{{xp.breakdown.kata}}</span></li>{{/if}}
+    {{#if xp.breakdown.kiho}}<li><span><strong>{{localize "l5r4.character.experience.breakdown.kiho"}}</strong>:</span> <span>{{xp.breakdown.kiho}}</span></li>{{/if}}
   </ul>
   <div class="flexcol -gap-sm">
     <h3>{{localize "l5r4.character.experience.adjustExperience"}}</h3>
@@ -87,11 +89,5 @@
         {{/each}}
       {{/if}}
     </section>
-  </div>
-  <div class="form-group">
-    <label>{{localize "l5r4.ui.common.total"}}</label>
-    <div class="form-fields">
-      <input type="text" disabled value="{{spentTotal}}" />
-    </div>
   </div>
 </section>
