--- a/templates/item/kata.hbs
+++ b/templates/item/kata.hbs
@@ -13,5 +13,11 @@
       <input name="system.mastery" type="number" value="{{system.mastery}}" data-type="Number" />
     </div>
   </div>
+  <div class="form-group">
+    <label>{{localize "l5r4.ui.common.cost"}}</label>
+    <div class="form-fields">
+      <input name="system.cost" type="number" min="0" value="{{system.cost}}" data-type="Number" />
+    </div>
+  </div>
 </section>
 {{> (concat "systems/" SYS_ID "/templates/item/_partials/_rules-summary.hbs") }}
