--- a/templates/item/kiho.hbs
+++ b/templates/item/kiho.hbs
@@ -21,5 +21,11 @@
       </select>
     </div>
   </div>
+  <div class="form-group">
+    <label>{{localize "l5r4.ui.common.cost"}}</label>
+    <div class="form-fields">
+      <input name="system.cost" type="number" min="0" value="{{system.cost}}" data-type="Number" />
+    </div>
+  </div>
 </section>
 {{> (concat "systems/" SYS_ID "/templates/item/_partials/_rules-summary.hbs") }}
